@@ -1,0 +1,17 @@
+%Error: t/t_math_countbits2_bad.v:15:15: Expected numeric type, but got a 'logic$[0:3]' data type
+                                       : ... note: In instance 't'
+   15 |       count = $countones(my_vec);   
+      |               ^~~~~~~~~~
+%Error: t/t_math_countbits2_bad.v:16:15: Expected numeric type, but got a 'logic$[0:3]' data type
+                                       : ... note: In instance 't'
+   16 |       count = $countbits(my_vec, '0);   
+      |               ^~~~~~~~~~
+%Error: t/t_math_countbits2_bad.v:17:14: Expected numeric type, but got a 'logic$[0:3]' data type
+                                       : ... note: In instance 't'
+   17 |       bool = $onehot(my_vec);   
+      |              ^~~~~~~
+%Error: t/t_math_countbits2_bad.v:18:14: Expected numeric type, but got a 'logic$[0:3]' data type
+                                       : ... note: In instance 't'
+   18 |       bool = $onehot0(my_vec);   
+      |              ^~~~~~~~
+%Error: Exiting due to
