@@ -25,6 +25,7 @@ Verilator 5.035 devel
 * Add `--make json` to enable integration with non-make/cmake build systems (#5799). [Andrew Voznytsa]
 * Add empty veriuser.h for legacy compatibility.
 * Optimize automatic splitting of some packed variables (#5843). [Geza Lore]
+* Fix detecting bad datatype on $countones (#5674). [Shou-Li Hsu]
 * Fix foreach of associative array inside a constraint block (#5727) (#5841). [Yilou Wang]
 * Fix reset of automatic function variables (#5747). [Augustin Fabre]
 * Fix invalid code motion over branches (#5811) (#5814). [Geza Lore]
